# react-native-desktop-qt

./: .buckconfig  .eslintignore  .eslintrc  .flowconfig  .gitattributes  .gitignore  .npmignore  .snyk  CMakeLists.txt  Development-linux.md  README-ubuntu.md  README.md  README.ubuntu  add-desktop-platform.patch  add-ubuntu-platform.patch  babel.config.js  increase_bundler_memory_usage.patch  jest-preset.json  metro.config.js  package-lock.json  package.json  react-native.config.js  ubuntu-server.js
Examples/: CMakeLists.txt  Example.qml.in
Examples/2048/: 2048.pro  CMakeLists.txt
Examples/2048/2048/: 2048.qrc  main.cpp  reactbridge.cpp  reactbridge.h  reactcomponentdata.cpp  reactcomponentdata.h  reactmoduledata.cpp  reactmoduleinterface.h  reactmodulemethod.cpp  reactmodulemethod.h  reactnetexecutor.cpp  reactnetexecutor.h  reactnetworking.cpp  reactnetworking.h  reactpipeexecutor.cpp  reactpipeexecutor.h  reacttiming.cpp  reacttiming.h  reactview.cpp  ubuntuactivitymanager.cpp  ubuntuactivitymanager.h  ubuntudatepickermanager.cpp  ubuntudatepickermanager.h  ubunturawtextmanager.h  ubuntuscrollviewmanager.cpp  ubuntuscrollviewmanager.h  ubuntutextmanager.h  ubuntuuimanager.cpp  ubuntuuimanager.h  ubuntuview.cpp  ubuntuview.h  ubuntuviewmanager.h
Examples/2048/qml/: 2048.qml
Examples/ActivityIndicator/: ActivityIndicatorApp.js  CMakeLists.txt
Examples/ActivityIndicator/qml/: ActivityIndicator.qml  run-example.sh.in
Examples/Alerts/: AlertsApp.js  CMakeLists.txt
Examples/Button/: ButtonApp.js  CMakeLists.txt
Examples/Fetch/: CMakeLists.txt  FetchApp.js
Examples/FlatList/: CMakeLists.txt  FlatListApp.js
Examples/Image/: CMakeLists.txt  ImageApp.js
Examples/Image/qml/: Image.qml
Examples/Modal/: CMakeLists.txt  ModalApp.js
Examples/Movies/: CMakeLists.txt  MovieCell.js  MoviesApp.desktop.js  MoviesApp.ubuntu.js  SearchBar.desktop.js  SearchBar.ubuntu.js
Examples/Movies/qml/: Movies.qml  run-example.sh.in
Examples/ScrollView/: CMakeLists.txt  ScrollViewApp.js
Examples/ScrollView/qml/: ScrollView.qml
Examples/TicTacToe/: CMakeLists.txt  TicTacToeApp.js
Examples/TicTacToe/qml/: TicTacToe.qml  run-example.sh.in
Examples/TouchableEvents/: CMakeLists.txt  TouchableEventsApp.js
Examples/Transform/: CMakeLists.txt  TransformApp.js  index.js
Examples/UIExplorer/: CMakeLists.txt  ImageExample.js  UIExplorerApp.desktop.js  UIExplorerApp.ubuntu.js  UIExplorerList.desktop.js  UIExplorerList.ubuntu.js  XHRExample.ubuntu.js
Examples/UIExplorer/qml/: UIExplorer.qml  run-example.sh.in
ReactQML/: CMakeLists.txt  reactattachedproperties.cpp  reactattachedproperties.h  reactbridge.cpp  reactbridge.h  reactcomponentdata.cpp  reactcomponentdata.h  reactexecutor.cpp  reactexecutor.h  reactflexlayout.cpp  reactflexlayout.h  reactitem.cpp  reactitem.h  reactmoduledata.cpp  reactmoduledata.h  reactmoduleinterface.h  reactmodulemethod.cpp  reactnetexecutor.cpp  reactnetworking.h  reactpipeexecutor.h  reactplugin.cpp  reactrawtextmanager.cpp  reactsourcecode.cpp  reactsourcecode.h  reacttextmanager.cpp  reacttextproperties.cpp  reacttextproperties.h  reacttiming.cpp  reacttiming.h  reactuimanager.cpp  reactuimanager.h  reactvaluecoercion.cpp  reactvaluecoercion.h  reactview.cpp  reactview.h  reactviewmanager.cpp  ubuntuactivitymanager.cpp  ubuntuactivitymanager.h  ubuntucomponentmodule.cpp  ubuntucomponentmodule.h  (+13 more)
ReactQt/: .clang-format  ActivityIndicator.ubuntu.js  CMakeLists.txt
ReactQt/application/src/: CMakeLists.txt  main.cpp  main.qml  main.qml.in  main.qrc  main.qrc.in
ReactQt/runtime/src/: CMakeLists.txt  alert.cpp  alert.h  appstate.cpp  appstate.h  asynclocalstorage.cpp  asynclocalstorage.h  attachedproperties.cpp  attachedproperties.h  blobprovider.cpp  blobprovider.h  bridge.cpp  bridge.h  clipboard.cpp  clipboard.h  componentdata.cpp  componentdata.h  deviceinfo.cpp  deviceinfo.h  eventdispatcher.cpp  eventdispatcher.h  exceptionsmanager.cpp  exceptionsmanager.h  executor.cpp  executor.h  jscutilities.cpp  jscutilities.h  linkingmanager.cpp  linkingmanager.h  logger.cpp  logger.h  moduledata.cpp  moduledata.h  moduleinterface.h  moduleloader.h  modulemethod.cpp  modulemethod.h  mouseeventsinterceptor.cpp  mouseeventsinterceptor.h  netexecutor.cpp  (+130 more)
ReactQt/tests/: CMakeLists.txt  TestActivityIndicatorProps.qml  TestArrayReconciliation.qml  TestButtonProps.qml  TestButtonSize.qml  TestImageProps.qml  TestModalProps.qml  TestModuleTest.qml  TestPickerProps.qml  TestSliderProps.qml  TestTextInputClear.qml  TestTextInputProps.qml  reactpropertytestcase.cpp  reactpropertytestcase.h  reacttestcase.cpp  reacttestcase.h  resources.qrc  test-activityindicator-props.cpp  test-array-reconciliation.cpp  test-button-props.cpp  test-button-size.cpp  test-image-props.cpp  test-integration.cpp  test-modal-props.cpp  test-netexecutor-socket.cpp  test-picker-props.cpp  test-slider-props.cpp  test-textinput-clear.cpp  test-textinput-props.cpp
ReactQt/tests/JS/: TestArrayReconciliationDeleteLast.js  TestArrayReconciliationInsertFirst.js  TestArrayReconciliationItemMove.js  TestButtonProps.js  TestButtonSize.js  TestImageProps.js  TestModalProps.js  TestSliderProps.js  TestTextInputClear.js  TestTextInputProps.js
ReactQt/tests/common/: reactpropertytestcase.cpp  reacttestcase.h
ReactQt/tests/test-activityindicator-props/: CMakeLists.txt  TestActivityIndicatorProps.js  TestActivityIndicatorProps.qml  resources.qrc
ReactQt/tests/test-array-reconciliation/: CMakeLists.txt  TestArrayReconciliation.qml  TestArrayReconciliationItemMove.js  resources.qrc  test-array-reconciliation.cpp
ReactQt/tests/test-button-props/: CMakeLists.txt  TestButtonProps.js  TestButtonProps.qml  resources.qrc  test-button-props.cpp
ReactQt/tests/test-button-size/: CMakeLists.txt  TestButtonSize.qml  resources.qrc
ReactQt/tests/test-image-props/: CMakeLists.txt  TestImageProps.js  TestImageProps.qml  resources.qrc
ReactQt/tests/test-integration/: TestModuleTest.qml  test-integration.cpp
ReactQt/tests/test-modal-props/: CMakeLists.txt  (+4 more)
ReactUbuntu/application/: CMakeLists.txt
(+499 files in other folders)
